Created endpoint for technicians by username & related tests